data/derived/comb/progs/unify/prog2191.ml.out
Characters 8-27:
  let _ = additivePersistence -9;;
          ^^^^^^^^^^^^^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
